Data displays on modal functional (WIP)

--- a/views/partials/asset-details.handlebars
+++ b/views/partials/asset-details.handlebars
@@ -1,3 +1,4 @@
-<button class="w-100" attributes={{{unobjectify this}}}> 
-    {{description}}
+<button class="w-100 updateBtn assetBtn" data-toggle="modal" data-target="#assetModal" data='{{{unobjectify this}}}'> 
+    <span data='{{{unobjectify this}}}'>{{description}}</span>
+    <i class="fas fa-times assetDelete" data='{{{unobjectify this}}}'></i>
 </button>
