--- a/views/partials/assetApportion-details.handlebars
+++ b/views/partials/assetApportion-details.handlebars
@@ -1,3 +1,4 @@
-<button class="w-100" attributes={{{unobjectify this}}}> 
-    {{apportion_instructions}}
+<button class="w-100 updateBtn apportionBtn" data-toggle="modal" data-target="#assetApportionModal" data='{{{unobjectify this}}}'> 
+    <span data='{{{unobjectify this}}}'>{{apportion_instructions}}</span>
+    <i class="fas fa-times assetApportionDelete" data='{{{unobjectify this}}}'></i>
 </button>
