--- a/views/partials/executor-details.handlebars
+++ b/views/partials/executor-details.handlebars
@@ -1,4 +1,4 @@
 <button class="w-100 updateBtn executorBtn" data-toggle="modal" data-target="#executorModal" data='{{{unobjectify this}}}'> 
     <span data='{{{unobjectify this}}}'>{{name}}</span>
-    <i class="fas fa-times executorDelete"></i>
+    <i class="fas fa-times executorDelete" data='{{{unobjectify this}}}'></i>
 </button>
