--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -299,7 +299,7 @@
             </div>
             <div class="form-group">
               <label>Relationship:</label>
-              <select class="form-control" id="witnessRelation" required>
+              <select class="form-control" id="witnessRelation">
                 <option value="Friend">Friend</option>
                 <option value="Relatives">Relatives</option>
                 <option value="Business Partner">Business Partner</option>
@@ -307,11 +307,11 @@
               </select>
             </div>
             <div class="form-group">
-              <label>Address:</label>
+              <label>Address *</label>
               <input type="text" id="witnessAddress" class="form-control" placeholder="79 Main Road, Suburb NSW" required />
             </div>
             <div class="modal-footer">
-              <button type="submit" class="btn btn-light" id="loginBtn">Save</button>
+              <button type="submit" class="btn btn-light" id="addWitnessBtn">Save</button>
             </div>
           </div>
         </form>        
