--- a/views/partials/witness-details.handlebars
+++ b/views/partials/witness-details.handlebars
@@ -1,4 +1,4 @@
 <button class="w-100 updateBtn witnessBtn" data-toggle="modal" data-target="#witnessModal" data='{{{unobjectify this}}}'> 
-    <span>{{name}}</span>
+    <span data='{{{unobjectify this}}}'>{{name}}</span>
     <i class="fas fa-times witnessDelete" data='{{{unobjectify this}}}'></i>
 </button>
