crud refectoring WIP

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -229,48 +229,46 @@
     </div>
 </div>
 
-{{! modal for assets}}
 
-    <div class="modal fade custom-modal" id="assetModal" tabindex="-1" role="dialog" aria-labelledby="project-modal-form" aria-hidden="true">
-    <div class="modal-dialog modal-lg"> {{! model assets header added by jack}}
-      <div class="modal-content">
-        <form id="asset">
+{{!↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓ assetModal ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓}}
+<div class="modal fade custom-modal" id="assetModal" tabindex="-1" role="dialog" aria-labelledby="project-modal-form" aria-hidden="true">
+  <div class="modal-dialog modal-lg"> {{! model assets header added by jack}}
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="assetModalTitle"></h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      </div>
+      <form id="asset-form">
         <div class="modal-body">
-
-        <div class="modal-header">
-          <h5 class="modal-title" id="assetsModalTitle">Add Assets</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        </div>
-
-            <div class="form-group"> {{! jack added form for asset ID please check  }}
-              <label>Asset ID</label>
-              <input type="text" id="assetId" class="form-control" enabled = false />
-            </div>
-
-            <div class="form-group"> {{! jack added form asset description }}
-              <label>Asset Description</label>
-              <input type="text" id="assetDescription" class="form-control" enabled = required />
-            </div>
-
-            <div class="form-group"> {{! jack added form for type of asset, text for now could be drop down}}
-              <label>Asset Type</label>
-              <input type="text" id="assetType" class="form-control" enabled = required />
-            </div>
-
-            <div class="form-group"> {{! jack added form for  asset value }}
-              <label>Asset value</label>
-              <input type="text" id="assetValue" class="form-control" enabled = required />
-            </div>
-
-              <div class="modal-footer"> {{!asset model save button}}
-              <button type="submit" class="btn btn-light" id="assetSave">Save</button>
-            </div>
-
+          <div class="form-group"> {{! jack added form for asset ID please check  }}
+            <label>Asset ID</label>
+            <input type="text" id="assetId" class="form-control" enabled = false />
           </div>
-        </form>  
-        </div> 
-      </div>     
-    </div>
+
+          <div class="form-group"> {{! jack added form asset description }}
+            <label>Asset Description *</label>
+            <input type="text" id="assetDescription" class="form-control" enabled = required />
+          </div>
+
+          <div class="form-group"> {{! jack added form for type of asset, text for now could be drop down}}
+            <label>Asset Type *</label>
+            <input type="text" id="assetType" class="form-control" enabled = required />
+          </div>
+
+          <div class="form-group"> {{! jack added form for  asset value }}
+            <label>Asset value *</label>
+            <input type="text" id="assetValue" class="form-control" enabled = required />
+          </div>
+
+          <div class="modal-footer" id="assetModalFooter"> {{!asset model save button}}
+            <button type="submit" class="btn btn-light" id="addAssetBtn" >add</button>
+          </div>
+
+        </div>
+      </form>  
+    </div> 
+  </div>     
+</div>
 
 
 
@@ -289,7 +287,7 @@
 
 
 
-  {{!↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓ witnessModal ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓}}
+{{!↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓ witnessModal ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓}}
   <div class="modal fade custom-modal" id="witnessModal" tabindex="-1" role="dialog" aria-labelledby="project-modal-form" aria-hidden="true">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
@@ -310,6 +308,7 @@
                 <option value="Relatives">Relatives</option>
                 <option value="Business Partner">Business Partner</option>
                 <option value="Others">Others</option>
+                <option value="">None</option>
               </select>
             </div>
             <div class="form-group">
