--- a/views/partials/witness-details.handlebars
+++ b/views/partials/witness-details.handlebars
@@ -1,4 +1,10 @@
 <button class="w-100 updateBtn witnessBtn" data-toggle="modal" data-target="#witnessModal" data='{{{unobjectify this}}}'> 
+    {{name}}
+    <i class="fas fa-times witnessDelete"></i>
+</button>
+
+
+{{!-- <button class="w-100 updateBtn witnessBtn" data-toggle="modal" data-target="#witnessModal" data='{{{unobjectify this}}}'> 
     <span data='{{{unobjectify this}}}'>{{name}}</span>
     <i class="fas fa-times witnessDelete" data='{{{unobjectify this}}}'></i>
-</button>
+</button> --}}
