section 1 to 3 CRUD done with some minor issues

--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -23,7 +23,7 @@ html {
 .logo {
   font-size: 75px;
   font-weight: 600;
-  font-family: "Parisienne", cursive;
+  font-family: "Roboto", cursive;
 }
 .logo span {
   color: var(--themeColor1);
