--- a/views/partials/beneficiary-details.handlebars
+++ b/views/partials/beneficiary-details.handlebars
@@ -1,5 +1,9 @@
 <button class="w-100 updateBtn beneficiaryBtn" data-toggle="modal" data-target="#beneficiaryModal" data='{{{unobjectify this}}}'> 
-    <span data='{{{unobjectify this}}}'>{{name}}</span>
+    {{name}}
     <i class="fas fa-times beneficiaryDelete" data='{{{unobjectify this}}}'></i>
 </button>
 
+{{!-- <button class="w-100 updateBtn beneficiaryBtn" data-toggle="modal" data-target="#beneficiaryModal" data='{{{unobjectify this}}}'> 
+    <span data='{{{unobjectify this}}}'>{{name}}</span>
+    <i class="fas fa-times beneficiaryDelete" data='{{{unobjectify this}}}'></i>
+</button> --}}
