--- a/views/layouts/main-1.handlebars
+++ b/views/layouts/main-1.handlebars
@@ -20,7 +20,7 @@
     </main>
     <!-- footer section start -->
     <footer>
-      <span>Created By lorem | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
+      <span>Created By NewCorp Solutions | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
     </footer>
   </body>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
