--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -258,7 +258,7 @@
             </div>
 
             <div class="form-group"> {{! jack added form for  asset value }}
-              <label>Asset value</label>
+              <label>Asset Value</label>
               <input type="text" id="assetValue" class="form-control" enabled = required />
             </div>
 
@@ -302,19 +302,6 @@
             <div class="form-group">
               <label>Name *</label>
               <input type="text" id="witnessName" class="form-control" placeholder="First Last" required />
-            </div>
-            <div class="form-group">
-              <label>Relationship:</label>
-              <select class="form-control" id="witnessRelation">
-                <option value="Friend">Friend</option>
-                <option value="Relatives">Relatives</option>
-                <option value="Business Partner">Business Partner</option>
-                <option value="Others">Others</option>
-              </select>
-            </div>
-            <div class="form-group">
-              <label>Address *</label>
-              <input type="text" id="witnessAddress" class="form-control" placeholder="79 Main Road, Suburb NSW" required />
             </div>
             <div class="modal-footer" id="witnessModalFooter">
               <button type="submit" class="btn btn-light" id="addWitnessBtn" >add</button>
