--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,7 +1,7 @@
 <header class="header">
       
         <div class="text">
-          some text here
+          Thy Will be Done. Don't wait 'till it's too late...
         </div>
         <ul class="menu">
           <li><a href="#" class="menu-btn">Home</a></li>
@@ -20,7 +20,7 @@
       <div class="max-width">
         <div class="home-content">
           <div class="text-1">Welcome to</div>
-          <div class="logo">Thy<span>Will</span></div>
+          <div class="logo-2">Thy<span>Will</span></div>
           <div class="text-2">Your Popular Will Drafting Tool</div>
           <div class="text-2">We are <span class="typing"></span></div>
           <div>
