code cleanup - beneficiary functinoality working

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,7 +21,7 @@
     </main>
     <!-- footer section start -->
     <footer>
-      <span>Created By lorem | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
+      <span>Created By NewCorp Solutions | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
     </footer>
   </body>
     <script src="/assets/scripts/typing.js"></script>
