--- a/views/partials/executor-modal.handlebars
+++ b/views/partials/executor-modal.handlebars
@@ -10,26 +10,23 @@
         <div class="modal-body">
 
           <div class="form-group"> {{! jack added form for  executor name please check  }}
-            <label>Executor Name *</label>
+            <label>Executor Name*:</label>
             <input type="text" id="executorName" class="form-control" required />
           </div>
 
           <div class="form-group"> {{! jack added form for  executor DOB please check  }}
-            <label>Executor Relationship:</label>
+            <label>Executor Relationship*:</label>
             <input type="text" id="executorRelationship" class="form-control"/>
           </div>
 
           <div class="form-group"> {{! jack added form for  executor address please check  }}
-            <label>Executor Address *</label>
+            <label>Executor Address*:</label>
             <input type="text" id="executorAddress" class="form-control" required />
           </div>
 
-          <div class="form-group"> {{! jack added form for  executor is alternate  please check  }}
-            <label>Executor Alternate *</label>
-            <select class="form-control" id="executorIsAlternate" required>
-              <option value = "true" >Yes</option>
-              <option value = "false">No</option>
-            </select>
+          <div class="form-group"> {{! added by jack check this.}}
+            <input type="checkbox" id="executorIsAlternate" class="btn-check" autocomplete="off"/>
+            <label class="btn btn-outline-primary" for="executorIsAlternate">This person is an alternate executor.</label>
           </div>
 
           <div class="modal-footer" id="executorModalFooter">
