--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -44,6 +44,7 @@
                  </p>
             <p><strong>D.O.B:</strong> {{user.DOB}}</p>
             <p><strong>Address:</strong> {{user.address}}</p>
+            <p><strong>COccupation:</strong> {{user.occupation}}</p>
             <p><strong>Casket Instructions:</strong> {{user.casket}}</p>
             <p><strong>Ceremonial Instructions:</strong> {{user.ceremony}}</p>
             <button id="editUser" data-toggle="modal" data-target="#userModal">Edit</button>
