--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+  
   <head>
+    <link rel="shortcut icon" type="image/x-icon" href="https://img.icons8.com/cotton/64/000000/sign-document.png" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
