--- a/views/partials/witness-modal.handlebars
+++ b/views/partials/witness-modal.handlebars
@@ -9,15 +9,15 @@
         <form id="witness-form">
           <div class="modal-body">
             <div class="form-group">
-              <label>Name *</label>
+              <label>Name*:</label>
               <input type="text" id="witnessName" class="form-control" placeholder="First Last" required />
             </div>
             <div class="form-group">
-              <label>Relationship:</label>
-              <input type="text" id="witnessRelationship" class="form-control" placeholder="Relative, Friend, Business Partner, etc." required />
+              <label>Occupation*:</label>
+              <input type="text" id="witnessOccupation" class="form-control" placeholder="Relative, Friend, Business Partner, etc." required />
             </div>
             <div class="form-group">
-              <label>Address *</label>
+              <label>Address*:</label>
               <input type="text" id="witnessAddress" class="form-control" placeholder="79 Main Road, Suburb NSW" required />
             </div>
             <div class="modal-footer" id="witnessModalFooter">
