--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -44,7 +44,7 @@
                  </p>
             <p><strong>D.O.B:</strong> {{user.DOB}}</p>
             <p><strong>Address:</strong> {{user.address}}</p>
-            <p><strong>COccupation:</strong> {{user.occupation}}</p>
+            <p><strong>Occupation:</strong> {{user.occupation}}</p>
             <p><strong>Casket Instructions:</strong> {{user.casket}}</p>
             <p><strong>Ceremonial Instructions:</strong> {{user.ceremony}}</p>
             <button id="editUser" data-toggle="modal" data-target="#userModal" data='{ "name":"{{{user.name}}}", "DOB":"{{{user.DOB}}}", "gender":"{{{user.gender}}}", "casket":"{{{user.casket}}}", "ceremony":"{{{user.ceremony}}}", "occupation":"{{{user.occupation}}}", "address":"{{{user.address}}}" }'>Edit</button>
