--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -4,11 +4,11 @@
           Thy Will be Done. Don't wait 'till it's too late...
         </div>
         <ul class="menu">
-          <li><a href="#" class="menu-btn">Home</a></li>
+          {{!-- <li><a href="#" class="menu-btn">Home</a></li> --}}
           <li><a href="#" class="menu-btn">About</a></li>
-          <li><a href="#" class="menu-btn">Guide</a></li>
+          {{!-- <li><a href="#" class="menu-btn">Guide</a></li> --}}
           <li><a href="https://legislation.nsw.gov.au/view/whole/html/inforce/current/act-2006-080" target="_blank" ="menu-btn">Legal</a></li>
-          <li><a href="#" class="menu-btn">Testimonials</a></li>
+          {{!-- <li><a href="#" class="menu-btn">Testimonials</a></li> --}}
           
         </ul>
         
@@ -31,75 +31,12 @@
       </div>
     </section>
 
-{{!↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓ login modal ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓}}
-    <div class="modal fade custom-modal" id="loginModal" tabindex="-1" role="dialog"
-        aria-labelledby="project-modal-form" aria-hidden="true">
-        <div class="modal-dialog modal-lg modal-dialog-centered">
+{{> login-modal}}
 
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Login<span class="flash" id="validateMessage"></span></h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <form id="login-form">
-                    <div class="modal-body">
-                      <div class="form-group">
-                          <label for="emailInput">Email:</label>
-                          <input type="email" id="email-login" class="form-control" required />
-                      </div>
-                      <div class="form-group">
-                        <label for="pwInput">Password:</label>
-                        <input type= "password" id="password-login" class="form-control" required />
-                      </div>
-                      </div>
-                    <div class="modal-footer">
-                        <button type="submit" class="btn btn-light" id="loginBtn">Login</button>
-                    </div>
-                </form>
-            </div>
-            
-        </div>
-    </div>
-{{!↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑ login modal ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑}}
+{{> signup-modal}}
 
-{{!↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓ Signup modal ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓}}
-    <div class="modal fade custom-modal" id="signUpModal" tabindex="-1" role="dialog"
-        aria-labelledby="project-modal-form" aria-hidden="true">
-        <div class="modal-dialog modal-lg modal-dialog-centered">
+{{> alert-modal}}
 
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Sign Up<span class="flash" id="validateMessageSignUp"></span></h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <form id="signup-form">
-                    <div class="modal-body">
-                      <div class="form-group">
-                          <label for="email-signup">Email:</label>
-                          <input type="email" id="email-signup" class="form-control" required />
-                      </div>
-                      <div class="form-group">
-                        <label for="password-signup">Password:</label>
-                        <input type= "password" id="password-signup" class="form-control" required />
-                      </div>
-                      <div class="form-group">
-                        <label for="password-repeat">Repeat Password:</label>
-                        <input type= "password" id="password-repeat" class="form-control" required />
-                      </div>
-                      </div>
-                    <div class="modal-footer">
-                        <button type="submit" class="btn btn-light" id="signBtn">Sign Up</button>
-                    </div>
-                </form>
-            </div>
-            
-        </div>
-    </div>
-{{!↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑ Signup modal ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑}}
 
     <script src="/assets/scripts/login.js"></script>
     {{#if logged_in}}
