--- a/views/partials/assetApportion-details.handlebars
+++ b/views/partials/assetApportion-details.handlebars
@@ -1,4 +1,7 @@
-<button class="w-100 updateBtn apportionBtn" data-toggle="modal" data-target="#assetApportionModal" data='{{{unobjectify this}}}'> 
+<button class="w-100 updateBtn apportionBtn"
+ {{!-- data-toggle="modal"  --}}
+ {{!-- data-target="#assetApportionModal"  --}}
+ data='{{{unobjectify this}}}'> 
     <span data='{{{unobjectify this}}}'>{{apportion_instructions}}</span>
     <i class="fas fa-times assetApportionDelete" data='{{{unobjectify this}}}'></i>
 </button>
