--- a/views/partials/assetApportion-modal.handlebars
+++ b/views/partials/assetApportion-modal.handlebars
@@ -11,7 +11,7 @@
 
           <div class="form-group"> {{! jack added form for  asset value }}
             <label>Apportioning Instructions*:</label>
-            <input type="text" id="apportionInstruction" class="form-control" required />
+            <input type="text" id="apportionInstructions" class="form-control" required />
           </div>
 
           <div class="form-group"> {{! jack added form for  asset value }}
