pdf link does not show user_id anymore

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -2,14 +2,14 @@
   <div class="welcome">Welcome back!</div>
   <ul class="menu">
     <li class="dropdown" style="float:left;">
-      <a href="#">Options</a>
+      {{!-- <a href="#">Options</a>
       <div class="dropdown-content" style="left:0;">
         <button><i class="fas fa-envelope-square"> Email</i></button>
         <button><i class="fas fa-download"> Download</i></button>
         <button><i class="fas fa-share-alt-square"> Share</i></button>
-      </div>
+      </div> --}}
     </li>
-    <li><a href="/api/pdf/{{account.id}}" target="_blank">Preview</a></li>
+    <li><a href="/api/pdf/" target="_blank">Preview</a></li>
     <li><a href="/" id="logout">Logout</a></li>
   </ul>
 </header>
