--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,7 +1,7 @@
 <header class="header">
       
         <div class="text">
-          Thy Will be Done. Don't wait 'till it's too late...
+          Be done in as little as 10 minutes. Don't wait 'till it's too late...
         </div>
         <ul class="menu">
           {{!-- <li><a href="#" class="menu-btn">Home</a></li> --}}
