--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
     <link rel="stylesheet" href="/assets/styles/style.css" />
-    <script data-ad-client="ca-pub-2679577236751743" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    {{!-- <script data-ad-client="ca-pub-2679577236751743" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> --}}
   </head>
   <body>
     <main>
